--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,7 +329,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .section_text {
-    color: #999;
+    color: #757575;
     font-size: 16px;
 }
 
@@ -1213,6 +1213,7 @@ h1, h2, h3, h4, h5, h6 {
     }
     .section_text {
         font-size: 12px;
+        font-width: 500;
     }
     
     
