--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1244,6 +1244,10 @@ h1, h2, h3, h4, h5, h6 {
     }
     
     
+    .slider {
+    padding: 0;
+    }
+    
     .slider_item {
         padding-left: 135px;
     }
