--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -726,10 +726,7 @@ h1, h2, h3, h4, h5, h6 {
     
 }
 
-.works_item:hover .works_img  {
-    opacity: .1;
-}
-.works_item:hover .works_info {
+.works_item .works_img  {
     opacity: 1;
 }
 
@@ -740,39 +737,8 @@ h1, h2, h3, h4, h5, h6 {
     
     transition: opacity .2s linear;
 }
-.works_info {
-    width: 100%;
-    padding: 0 15px;
-    
-    font-size: 14px;
-    text-align: center;
-    color: #fff;
-    opacity: 0;
-    
-    position: absolute;
-    top: 50%;
-    left: 0;
-    z-index: 1;
-    
-    transform: translate3d(0, -50%, 0);
-    transition: opacity .2s linear;
-}
 
-.works_title {
-    margin-bottom: 5 px;
-    color: #fff;
-    text-transform: uppercase;
-    text-decoration: none;
-}
-.works_title:hover {
-    text-decoration: underline;
-}
 
-.works_text {
-    font-size: 15px;
-    font-weight: 300;
-    font-style: italic;
-}
 
 /* Blog */
 .blog {
